--- a/Styles/navigation.css
+++ b/Styles/navigation.css
@@ -1,10 +1,23 @@
 @charset "UTF-8";
 /* CSS DOCUMENT */
 
+/*HTML NAV
+<nav>
+    <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="#">Theatre Bill</a></li>
+        <li><a href="/Pages/history-refactor.html">History</a></li>
+        <li><a href="/Pages/stew-recipe.html">Stew Recipe</a></li>
+        <li><a href="/Pages/cascades.html">Cascades</a></li>
+        <li><a href="/Pages/optimizing-images.html">Images</a></li>
+    </ul>
+</nav>
+*/
+
 nav ul {
     text-align: center;
     list-style: none;
-    background-color: #282828;
+    background-color: #28292b;
     margin-bottom: 15px;
 }
 
@@ -17,11 +30,11 @@ nav a {
     display: block;
     width: 100px;
     text-decoration: none;
-    background-color: #282828;
-    color: #f5f7d1;
+    background-color: #28292b;
+    color: #FFDDBA;
 }
 
 nav a:hover {
-    background-color: #f5f7d1;
-    color: #282828
+    background-color: #FFDDBA;
+    color: #28292b
 }
