--- a/Styles/navigation.css
+++ b/Styles/navigation.css
@@ -2,6 +2,8 @@
 /* CSS DOCUMENT */
 
 /*HTML NAV
+<link href="../Styles/navigation.css" rel="stylesheet" type="text/css">
+
 <nav>
     <ul>
         <li><a href="../index.html">Home</a></li>
